Fix alignment of elements within header for tablet and desktop sizes

--- a/source/sass/blocks/header.scss
+++ b/source/sass/blocks/header.scss
@@ -5,7 +5,6 @@
   @include md-size {
     flex-direction: row;
     margin-top: 25px;
-    outline: 2px dashed brown;
   }
 
   @include lg-size {
@@ -19,7 +18,6 @@
     @include container();
     display: flex;
     justify-content: space-between;
-    outline: 2px dashed tomato;
   }
 
   @include lg-size {
@@ -35,8 +33,7 @@
   padding-bottom: 15px;
 
   @include md-size {
-    outline: 2px dashed blue;
-    width: 190px;
+    width: 175px;
     margin: 0;
     padding: 0;
   }
@@ -51,7 +48,6 @@
   @include md-size {
     width: 175px;
     height: 60px;
-    outline: 2px dashed green;
   }
 
   @include lg-size {
@@ -63,4 +59,10 @@
   @include md-size {
     display: block;
   }
+}
+
+.header__nav {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
