--- a/source/sass/blocks/nav.scss
+++ b/source/sass/blocks/nav.scss
@@ -4,7 +4,7 @@
   }
 
   @include lg-size {
-    width: 485px;
+    width: 480px;
   }
 }
 
